# ModulusZKML

./: .gitignore  Cargo.toml  README.md
.github/workflows/: master_pull.yml
examples/: permutation_circuit_benches.rs
remainder_ligero/: Cargo.toml
remainder_ligero/src/: adapter.rs  lib.rs  lib_ryan_dumb_changes.rs  ligero_commit.rs  ligero_ml_helper.rs  ligero_structs.rs  tests.rs  utils.rs
remainder_ligero/src/poseidon_ligero/: mod.rs  poseidon_digest.rs
remainder_mlp/: Cargo.toml
remainder_mlp/src/: bits_are_binary_builder.rs  dims.rs  lib.rs  nn_full_circuit.rs  relu_builder.rs  utils.rs
remainder_mlp/src/dataparallel_circuit/: dataparallel_bias_builder.rs  dataparallel_bits_are_binary_builder.rs  dataparallel_circuit_builders.rs  dataparallel_nn_full_circuit.rs  dataparallel_partial_recomp_builder.rs  dataparallel_relu_builder.rs  mod.rs  utils.rs
remainder_mlp/src/non_batched_circuit/: mod.rs  nn_full_circuit.rs
remainder_mlp/src/simple_arithmetic_circuit/: circuit.rs  circuit_builders.rs  generate_random_inputs.rs  mod.rs  tests.rs
remainder_mlp/src/soln_workshop_exercise_circuit/: circuit_builders.rs  mod.rs  nn_full_circuit.rs  relu_builder.rs  soln_bias_builder.rs  soln_bits_are_binary_builder.rs  soln_nn_full_circuit.rs  soln_partial_recomp_builder.rs  soln_relu_builder.rs  soln_workshop_utils.rs  workshop_dims.rs  workshop_utils.rs
remainder_mlp/src/workshop_exercise_circuit/: bias_builder.rs  bits_are_binary_builder.rs  bits_are_binary_circuit.rs  circuit_builders.rs  mod.rs  nn_full_circuit.rs  partial_recomp_builder.rs  relu_builder.rs  workshop_dims.rs  workshop_utils.rs
remainder_mnist/: Cargo.toml  lib.rs
remainder_mnist/src/: bias_builder.rs  binary_recomp_circuit.rs  bits_are_binary_builder.rs  bits_are_binary_circuit.rs  circuit_builders.rs  data_pipeline.rs  lib.rs  matmul_circuit.rs  nn_full_circuit.rs  nn_linear_circuit.rs  nn_relu_circuit.rs  relu_builder.rs  relu_circuit.rs  self_subtract_builder.rs  utils.rs
remainder_prover/: Cargo.toml
remainder_prover/examples/: permutation_circuit_benches.rs  zkdt_circuit_bench.rs
remainder_prover/src/: bin.rs  lib.rs
remainder_prover/src/expression/: mod.rs
remainder_prover/src/gate/: addgate.rs  addgate_tests.rs  batched_addgate.rs  batched_mulgate.rs  gate.rs  gate_helpers.rs  mod.rs  mulgate.rs  mulgate_tests.rs
remainder_prover/src/layer/: batched.rs  claims.rs  combine_mle_refs.rs  empty_layer.rs  layer_enum.rs  matmult.rs  mod.rs  simple_builders.rs
remainder_prover/src/mle/: addgate.rs  addgate_tests.rs  batched_addgate.rs  batched_mulgate.rs  beta.rs  dense.rs  gate.rs  gate_helpers.rs  mle_enum.rs  mod.rs  mulgate.rs  mulgate_tests.rs  structs.rs  zero.rs
remainder_prover/src/mle/bin_decomp_structs/: bin_decomp_16_bit.rs  bin_decomp_32_bit.rs  bin_decomp_64_bit.rs  bin_decomp_8_bit.rs  mod.rs
remainder_prover/src/prover/: combine_layers.rs  helpers.rs  input_layer.rs  mod.rs  test_helper_circuits.rs  tests.rs
remainder_prover/src/prover/input_layer/: combine_input_layers.rs  enum_input_layer.rs  ligero_input_layer.rs  mod.rs  public_input_layer.rs  random_input_layer.rs
remainder_prover/src/sumcheck/: mod.rs  tests.rs
remainder_prover/src/utils/: mod.rs
remainder_prover/src/zkdt/: benchmark.txt  builders.rs  cache_upshot_catboost_inputs_for_testing.rs  constants.rs  dt2zkdt.rs  helpers.rs  input_data_to_circuit_adapter.rs  legacy_circuits.rs  mod.rs  structs.rs  trees.rs  zkdt_circuit.rs  zkdt_circuit_parts.rs  zkdt_helpers.rs  zkdt_layer.rs  zkdt_multiple_tree_circuit.rs
remainder_prover/src/zkdt/attribute_consistency_circuit/: circuits.rs  dataparallel_circuits.rs  multitree_circuits.rs  tests.rs
remainder_prover/src/zkdt/binary_recomp_circuit/: circuit_builders.rs  circuits.rs  dataparallel_circuits.rs  mod.rs  multitree_circuits.rs  (+1 more)
remainder_shared_types/: Cargo.toml
remainder_shared_types/src/: lib.rs  poseidon.rs
remainder_shared_types/src/transcript/: mod.rs  poseidon_transcript.rs
scripts/: run_workshop_circuit.sh
src/: lib.rs
src/expression/: mod.rs
src/layer/: batched.rs  claims.rs  empty_layer.rs  flat_layer.rs  input_layer.rs  layer_enum.rs  mod.rs
src/mle/: beta.rs  dense.rs  gate.rs  mle_enum.rs  mod.rs  zero.rs  zkdt_structs.rs
src/prover/: input_layer.rs  input_layer_faje.rs  mod.rs
src/prover/input_layer/: combine_input_layers.rs  enum_input_layer.rs  ligero_input_layer.rs  mod.rs  public_input_layer.rs  random_input_layer.rs
src/sumcheck/: mod.rs  tests.rs
src/transcript/: mod.rs  poseidon_transcript.rs
src/utils/: mod.rs
src/zkdt/: dt2zkdt.drawio  dt2zkdt.rs  helpers.rs  mod.rs  structs.rs  test_qsamples.npy  test_qtrees.json  trees.rs  zkdt_circuit.rs  zkdt_circuit_parts.rs  zkdt_helpers.rs  zkdt_layer.rs
(+34 files in other folders)
