[package]
name = "remainder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = {version = "0.4.2", features = ["derive"]}
ark-std = "0.4.0"
ark-test-curves = "0.4.2"
criterion = "0.5.1"
derive_more = "0.99.17"
itertools = "0.11.0"
ndarray = "0.15.6"
rayon = "1.7.0"
thiserror = "1.0.40"
tracing = "0.1.37"
rand = "0.8"

[dev-dependencies]

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ndarray/rayon"]
