[package]
name = "remainder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-crypto-primitives = {version = "0.4.0", features = ["sponge"]}
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = {version = "0.4.2", features = ["derive"]}
ark-std = "0.4.0"
ark-test-curves = "0.4.2"
criterion = "0.5.1"
# derive_more = "0.99.17"
itertools = "0.11.0"
rayon = "1.7.0"
thiserror = "1.0.40"
tracing = "0.1.37"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4.1"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
tracing-subscriber = "0.3.17"

[dev-dependencies]

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-crypto-primitives/parallel"]
