[package]
name = "remainder-shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition", features = ["halo2-axiom"] }
poseidon = { git = "https://github.com/scroll-tech/poseidon/", branch = "main" } # Scroll's Poseidon impl
serde_json = "1.0.105"
thiserror = "1.0.40"
tracing = "0.1.37"
itertools = "0.11.0"
ark-std = "0.4.0"